--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header class='masthead'>
         <p class='masthead-intro'>Hi I'm</p>
-        <h1 class='masthead-heading'>Your Name Here</h1>
+        <h1 class='masthead-heading'>Francesco Albanese</h1>
     </header>
     <section class="details">
       <h1>Introduction</h1>
@@ -36,5 +36,3 @@
         </ul>
     </footer>
 </body>
-
-</html>
