updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a Customer Support Manager learning software development.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Originally I am from Woburn Massachusetts.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Hiking, snowboarding, and video games.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Just a software developer for now!</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I am currently living in Amesbury Massachusetts.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>To build cool stuff of course!</p>
     </section>
 
     <footer id="footer">
